--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -1,3 +1,12 @@
 
 @import url('assets/css/light-bootstrap-dashboard.css');
 @import url('../../../node_modules/font-awesome/css/font-awesome.css');
+.card-header{
+    height: 45px;
+}
+.setting-icon{
+    font-size: 20px;
+}
+.fas-key{
+    margin-right: 10px;
+}
