--- a/src/app/user/component/aboutus/aboutus.component.html
+++ b/src/app/user/component/aboutus/aboutus.component.html
@@ -6,8 +6,8 @@
           <div class="breadcrumbs">
             <ul>
               <li>Current Page:</li>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="">About us</a></li>
+              <li><a routerLink="/home">Home</a></li>
+              <li><p>About Us</p></li>
             </ul>
           </div>
         </div>
@@ -21,29 +21,28 @@
         <div class="col-md-8 col-lg-8 wow fadeInUp">
           <div class="textcont">
             <h3>Medical Stories</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-            <h4>Back in 1997</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
+            <p>We are a big organization with lots of investment from company around the world with the good experience in medical field. We privileged to connect with millions of customers every day with exceptional produce and more than 24.000 details store in 70 countries.</p>
+            <h4>Back in 1995</h4>
+            <p>Our story began in 1995. Back then we were the small team of volunteering activities with several members.Few year ago, with the demand of medicine, medical machine, hospital equipment. At that time we were the transporter, detailers. Our team always desire to help the sick, homeless... Later, we had amount of good capital, we import all type of stuff relevent to medical. </p>
           </div>  
         </div>
         <div class="col-md-4 col-lg-4 wow fadeInUp" data-wow-delay=".2s">
           <div class="section-18-img">
-            <img src="assets/images/a0.jpg"  class="img-responsive" alt=""/>
+            <img src="../../../../assets/images/company.jpg"  class="img-responsive" alt=""/>
           </div>
         </div>
       </div>
       <div class="row mission-vision">
         <div class="col-sm-6 col-md-6 wow fadeInUp" data-wow-delay=".3s">
           <figure>
-            <img src="assets/images/a2.jpg"  class="img-responsive" alt=""/>
+            <img src="../../../../assets/images/about1.jpg"  class="img-responsive" alt=""/>
           </figure>
           <h4>Mediacal Mission</h4>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
         </div>
         <div class="col-sm-6 col-md-6 wow fadeInUp" data-wow-delay=".4s">
           <figure>
-            <img src="assets/images/a1.jpg"  class="img-responsive" alt=""/>
+            <img src="../../../../assets/images/about2.jpg"  class="img-responsive" alt=""/>
           </figure>
           <h4>Mediacal Vision</h4>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
@@ -58,7 +57,7 @@
         <div class="col-md-12">
           <header class="title-head">
             <h2>Awesome Doctors Team</h2>
-            <p>Using many font styles canslow down your webpage, so only select the font styles that you</p>
+            <p>This's our typical faces</p>
             <div class="line-heading">
               <span class="line-left"></span>
               <span class="line-middle">+</span>
@@ -68,134 +67,41 @@
         </div>
         <div class="col-md-3 col-sm-6 my-team-member wow fadeInUp">
           <div class="my-member-img">
-            <img src="assets/images/team/1.jpg" class="img-responsive" alt="team01">
+            <img src="../../../../assets/images/avt4.jpg" class="img-responsive" alt="team01">
           </div>
           <div class="my-team-detail text-center">
             <h4 class="my-member-name">Turanga Parker</h4>
             <p class="my-member-post">Director</p>
-            <div class="my-member-social">
-              <ul>
-                <li><a href="#" target="_blank"><i class="fa fa-envelope"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-              </ul>
-            </div>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 my-team-member wow fadeInUp" data-wow-delay=".2s">
           <div class="my-member-img">
-            <img src="assets/images/team/2.jpg" class="img-responsive" alt="team02">
+            <img src="../../../../assets/images/avt1.jpg" class="img-responsive" alt="team02">
           </div>
           <div class="my-team-detail text-center">
             <h4 class="my-member-name">Mariya Rayan</h4>
             <p class="my-member-post">Manager</p>
-            <div class="my-member-social">
-              <ul>
-                <li><a href="#" target="_blank"><i class="fa fa-envelope"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-              </ul>
-            </div>
+ 
           </div>
         </div>
         <div class="col-md-3 col-sm-6 my-team-member wow fadeInUp" data-wow-delay=".3s">
           <div class="my-member-img">
-            <img src="assets/images/team/3.jpg" class="img-responsive" alt="team03">
+            <img src="../../../../assets/images/avt2.jpeg" class="img-responsive" alt="team02">
           </div>
           <div class="my-team-detail text-center">
             <h4 class="my-member-name">Jerry Hu</h4>
             <p class="my-member-post">Sales Manager</p>
-            <div class="my-member-social">
-              <ul>
-                <li><a href="#" target="_blank"><i class="fa fa-envelope"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-              </ul>
-            </div>
+  
           </div>
         </div>
         <div class="col-md-3 col-sm-6 my-team-member wow fadeInUp" data-wow-delay=".2s">
           <div class="my-member-img">
-            <img src="assets/images/team/4.jpg" class="img-responsive" alt="team04">
+            <img src="../../../../assets/images/avt3.jpg" class="img-responsive" alt="team04">
           </div>
           <div class="my-team-detail text-center">
             <h4 class="my-member-name">Sara Rayan</h4>
             <p class="my-member-post">Support</p>
-            <div class="my-member-social">
-              <ul>
-                <li><a href="#" target="_blank"><i class="fa fa-envelope"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section id="section14" class="section-margine">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-lg-12">
-          <header class="title-head">
-            <h2>Reent Post</h2>
-            <p>Using many font styles canslow down your webpage, so only select the font styles that you</p>
-            <div class="line-heading">
-              <span class="line-left"></span>
-              <span class="line-middle">+</span>
-              <span class="line-right"></span>
-            </div>
-          </header>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-lg-4">
-          <div class="section-14-box wow fadeInUp">
-            <img src="assets/images/blog/blog-1.jpg" class="img-responsive" alt="Blog image 1">
-            <h3><a href="#">New Cancer Treatment</a></h3>
-            <div class="row">
-              <div class="col-md-12 col-lg-12">
-                <div class="comments">
-                  <a class="btn btn-primary btn-sm">July, 30, 30</a>
-                  <a href="#" class="btn btn-primary btn-sm">rkwebdes</a>
-                </div>
-              </div>
-            </div>
-            <p>Laoreet eleifend condimentum urna odio inceptos bibendum curae imperdiet laoreet nunc tellus, class ultricies vivamus primis.</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-4">
-          <div class="section-14-box wow fadeInUp" data-wow-delay=".2s">
-            <h3><a href="#">Surgery Advices</a></h3>
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="comments">
-                  <a class="btn btn-primary btn-sm">July, 30, 30</a>
-                  <a href="#" class="btn btn-primary btn-sm">rkwebdes</a>
-                </div>
-              </div>
-            </div>
-            <p>Laoreet eleifend condimentum urna odio inceptos bibendum curae imperdiet laoreet nunc tellus, class ultricies vivamus primis.</p>
-            <img src="assets/images/blog/blog-2.jpg" class="img-responsive" alt="Blog image 1">
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-4">
-          <div class="section-14-box wow fadeInUp" data-wow-delay=".3s">
-            <img src="assets/images/blog/blog-3.jpg" class="img-responsive" alt="Blog image 1">
-            <h3><a href="#">Medicine Sale Market</a></h3>
-            <div class="row">
-              <div class="col-md-12 col-lg-12">
-                <div class="comments">
-                  <a class="btn btn-primary btn-sm">July, 30, 30</a>
-                  <a href="#" class="btn btn-primary btn-sm">rkwebdes</a>
-                </div>
-              </div>
-            </div>
-            <p>Laoreet eleifend condimentum urna odio inceptos bibendum curae imperdiet laoreet nunc tellus, class ultricies vivamus primis.</p>
+ 
           </div>
         </div>
       </div>
@@ -204,12 +110,12 @@
   <section id="section9" class="section-margine section-9-background">
     <div class="container">
       <div class="row">
-        <div class="col-md-2 col-sm-4 col-xs-6"><img src="assets/images/clients/1.png" class="img-responsive wow fadeInUp" alt=""></div>
-        <div class="col-md-2 col-sm-4 col-xs-6"><img src="assets/images/clients/2.png" class="img-responsive wow fadeInUp" alt=""></div>
-        <div class="col-md-2 col-sm-4 col-xs-6"><img src="assets/images/clients/3.png" class="img-responsive wow fadeInUp" alt=""></div>
-        <div class="col-md-2 col-sm-4 col-xs-6"><img src="assets/images/clients/4.png" class="img-responsive wow fadeInUp" alt=""></div>
-        <div class="col-md-2 col-sm-4 col-xs-6"><img src="assets/images/clients/5.png" class="img-responsive wow fadeInUp" alt=""></div>
-        <div class="col-md-2 col-sm-4 col-xs-6"><img src="assets/images/clients/6.png" class="img-responsive wow fadeInUp" alt=""></div>
+        <div class="col-md-2 col-sm-4 col-xs-6"><img src="../../../../assets/images/clients/1.jpg" class="img-responsive wow fadeInUp" alt=""></div>
+        <div class="col-md-2 col-sm-4 col-xs-6"><img src="../../../../assets/images/clients/2.png" class="img-responsive wow fadeInUp" alt=""></div>
+        <div class="col-md-2 col-sm-4 col-xs-6"><img src="../../../../assets/images/clients/3.png" class="img-responsive wow fadeInUp" alt=""></div>
+        <div class="col-md-2 col-sm-4 col-xs-6"><img src="../../../../assets/images/clients/4.jpg" class="img-responsive wow fadeInUp" alt=""></div>
+        <div class="col-md-2 col-sm-4 col-xs-6"><img src="../../../../assets/images/clients/5.png" class="img-responsive wow fadeInUp" alt=""></div>
+        <div class="col-md-2 col-sm-4 col-xs-6"><img src="../../../../assets/images/clients/6.png" class="img-responsive wow fadeInUp" alt=""></div>
       </div>
     </div>
   </section>
