--- a/src/app/login/assets/css/main.css
+++ b/src/app/login/assets/css/main.css
@@ -62,10 +62,10 @@ a:focus {
 a:hover {
 	text-decoration: none;
   color: #6a7dfe;
-  color: -webkit-linear-gradient(left, #21d4fd, #b721ff);
-  color: -o-linear-gradient(left, #21d4fd, #b721ff);
-  color: -moz-linear-gradient(left, #21d4fd, #b721ff);
-  color: linear-gradient(left, #21d4fd, #b721ff);
+  color: -webkit-linear-gradient(to left, #21d4fd, #b721ff);
+  color: -o-linear-gradient(to left, #21d4fd, #b721ff);
+  color: -moz-linear-gradient( to left, #21d4fd, #b721ff);
+  color: linear-gradient(to left, #21d4fd, #b721ff);
 }
 
 /*---------------------------------------------*/
@@ -260,10 +260,10 @@ iframe {
   transition: all 0.4s;
 
   background: #6a7dfe;
-  background: -webkit-linear-gradient(left, #21d4fd, #b721ff);
-  background: -o-linear-gradient(left, #21d4fd, #b721ff);
-  background: -moz-linear-gradient(left, #21d4fd, #b721ff);
-  background: linear-gradient(left, #21d4fd, #b721ff);
+  background: -webkit-linear-gradient(to left, #21d4fd, #b721ff);
+  background: -o-linear-gradient(to left, #21d4fd, #b721ff);
+  background: -moz-linear-gradient(to left, #21d4fd, #b721ff);
+  background: linear-gradient(to left, #21d4fd, #b721ff);
 }
 
 .focus-input100::after {
@@ -327,18 +327,18 @@ iframe {
 
 .btn-show-pass:hover {
   color: #6a7dfe;
-  color: -webkit-linear-gradient(left, #21d4fd, #b721ff);
-  color: -o-linear-gradient(left, #21d4fd, #b721ff);
-  color: -moz-linear-gradient(left, #21d4fd, #b721ff);
-  color: linear-gradient(left, #21d4fd, #b721ff);
+  color: -webkit-linear-gradient(to left, #21d4fd, #b721ff);
+  color: -o-linear-gradient(to left, #21d4fd, #b721ff);
+  color: -moz-linear-gradient(to left, #21d4fd, #b721ff);
+  color: linear-gradient(to left, #21d4fd, #b721ff);
 }
 
 .btn-show-pass.active {
   color: #6a7dfe;
-  color: -webkit-linear-gradient(left, #21d4fd, #b721ff);
-  color: -o-linear-gradient(left, #21d4fd, #b721ff);
-  color: -moz-linear-gradient(left, #21d4fd, #b721ff);
-  color: linear-gradient(left, #21d4fd, #b721ff);
+  color: -webkit-linear-gradient(to left, #21d4fd, #b721ff);
+  color: -o-linear-gradient(to left, #21d4fd, #b721ff);
+  color: -moz-linear-gradient(to left, #21d4fd, #b721ff);
+  color: linear-gradient(to left, #21d4fd, #b721ff);
 }
 
 
@@ -372,12 +372,14 @@ iframe {
   width: 300%;
   height: 100%;
   background: #a64bf4;
-  background: -webkit-linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff);
-  background: -o-linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff);
-  background: -moz-linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff);
-  background: linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff);
+  background: -webkit-linear-gradient(to left, #21d4fd, #b721ff, #21d4fd, #b721ff);
+  background: -o-linear-gradient(to left, #21d4fd, #b721ff, #21d4fd, #b721ff);
+  background: -moz-linear-gradient(to left, #21d4fd, #b721ff, #21d4fd, #b721ff);
+  background: linear-gradient(to left, #21d4fd, #b721ff, #21d4fd, #b721ff);
   top: 0;
   left: -100%;
+
+  
 
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
