--- a/src/app/user/component/lecture/detail-lecture/detail-lecture.component.css
+++ b/src/app/user/component/lecture/detail-lecture/detail-lecture.component.css
@@ -20,6 +20,7 @@
   font-family: "Quicksand", sans-serif;
   animation: animate 2s linear infinite;
   opacity: 0.85;
+  margin-top: 180px;
 }
 
 a{
