--- a/src/app/user/component/lecture/quiz-examination/quiz-examination.component.html
+++ b/src/app/user/component/lecture/quiz-examination/quiz-examination.component.html
@@ -1,3 +1,20 @@
+<section id="inner-title" class="inner-title mb-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-lg-6"><h2>Examination</h2></div>
+        <div class="col-md-6 col-lg-6">
+          <div class="breadcrumbs">
+            <ul>
+              <li>Current Page:</li>
+              <li><a routerLink="/home">Home</a></li>
+              <li><a routerLink="/lecture">Lecture</a></li>
+              <li><p>Quiz</p></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> 
 <div class="container quiz-container">
     <div id="clock"></div>
     <div id="quiz">
