--- a/src/app/user/component/seminar/seminar.component.html
+++ b/src/app/user/component/seminar/seminar.component.html
@@ -1,4 +1,19 @@
-<hr>
+<section id="inner-title" class="inner-title mb-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-lg-6"><h2>Seminar</h2></div>
+        <div class="col-md-6 col-lg-6">
+          <div class="breadcrumbs">
+            <ul>
+              <li>Current Page:</li>
+              <li><a routerLink="/home">Home</a></li>
+              <li><p>Seminar</p></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> 
 <div class="container wrapper">
     <div class="filter">
         <label for="">Filter:&nbsp;</label>
